# VSB-SRACKY

NS/BasicDriverNETCORE/BasicDriverNETCORE/: BasicDriverNETCORE.sln
NS/BasicDriverNETCORE/BasicDriverNETCORE/BasicDriverNETCORE/: BasicDriverNETCORE.csproj  DriverTrainer.cs  IDriver.cs  LoadXML.cs  NetDriver.cs  Program.cs  RaceConnector.cs  SimpleDriver.cs
NS/NS1/: NS1.sln
NS/NS1/NS/: Form1.Designer.cs  Form1.cs  LoadXML.cs  NS.csproj  Program.cs
NS/NS1/NS/Percepton/: Percepton.cs  ShowPercepton.cs
NS/NS1/NS/Properties/: AssemblyInfo.cs  Resources.Designer.cs
NS/NS2BACKPROP/NNBackPropagation/: NNBackPropagation.sln
NS/NS2BACKPROP/NNBackPropagation/NNBackPropagation/: IActivationFunction.cs  NNLayer.cs  NNetwork.cs  Neuron.cs  SigmoidFunction.cs
NS/NS2BACKPROP/NNBackPropagation/NeuralNetworkBP/: BiasNeuron.cs  Connection.cs  InputConnection.cs  NNFactory.cs  NeuralLayer.cs  NeuralNet.cs  NeuralNetworkBP.csproj  Neuron.cs  RandomX.cs  Sigmoid.cs
NS/NS2BACKPROP/NNBackPropagation/TestApp/: LoadCSVMNIST.cs  LoadXML.cs  Program.cs  TestApp.csproj
NS/NS2BACKPROP/NNBackPropagation/TestProject/: TestProject.csproj  UnitTest1.cs
NS/src/Controllers/: MainController.java
NS/src/Percepton/: GraphicPane.java  IGraphicPane.java  IPercepton.java  Percepton.java  PerceptonListener.java
NS/src/sample/: Controller.java  Main.java  XML.java  sample.fxml
ZMD/: CMakeLists.txt  ConvertorIMG.cpp  ConvertorIMG.h  main.cpp
ZMD/ZMD VR/: main.py
ZMD/ZMDPython/: main.py  new.py  readme.md
ZMD/dvb/: CMakeLists.txt
ZMD/dvb/dvb-apps/: .hg_archival.txt
(+3 files in other folders)
